<resources>
    <string name="app_name">MyShop</string>
    <string name="error_message_something_wrong">Something went wrong!</string>
    <string name="text_login">LOGIN</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_version">Version</string>
    <string name="dialog_exit_title">EXIT</string>
    <string name="dialog_exit_text">Are you sure you want to exit?</string>
    <string name="all_yes">YES</string>
    <string name="all_cancel">CANCEL</string>
    <string name="error_message_field_required">This field is required!</string>
    <string name="menu_my_statements">My Statements</string>
    <string name="menu_my_messages">My Messages</string>
    <string name="menu_my_contacts">My Contacts</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="text_home">Home</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="text_exercice">Exercice</string>
    <string name="hint_code">Code</string>
    <string name="text_client">Client</string>
    <string name="hint_name">Name</string>
    <string name="text_type">Type</string>
    <string name="msg_loading_data">Loading Data</string>
    <string name="warning_message_client_do_not_exist">Client Do Not Exist</string>
    <string name="loading">Loading</string>
    <string name="no_item_to_show">No Items To Show</string>
    <string name="refresh">Refresh</string>
    <string name="text_filter">Filter</string>
    <string name="text_filters">Filters</string>
    <string name="error_message_server_down">Server is down please try after some time</string>
    <string name="menu_item_logout">Logout</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_text">Are you sure you want to log out?</string>
</resources>