<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/red_500">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dialog_exit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialog_exit_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Add Complaint Title Label -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dialog_exit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/dialog_exit_text"
        android:textColor="@color/light_bg_dark_secondary_text"
        android:textSize="@dimen/_12ssp" />

    <!-- Add/Cancel Buttons -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_25sdp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentTop="true"
            android:alpha=".5"
            android:background="@color/colorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_exit_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/all_yes"
            android:textColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_exit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_toStartOf="@+id/btn_dialog_exit_yes"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/all_cancel"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
