<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activites.LoginActivity">

    <!-- Custom ImageView With Ken Burns Effect -->
    <com.e2p.myshop.views.kbv.KenBurnsView
        android:id="@+id/ken_burns_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg"/>

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentTop="true"
        android:background="@drawable/transparent_background">

        <!-- App Name -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Form -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/transparent_background"
        android:orientation="vertical"
        android:padding="@dimen/_6sdp">

        <!-- Login Logo -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_login_logo"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:srcCompat="@drawable/ic_lock_48"
            app:tint="@color/colorPrimaryDark" />

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            app:hintTextAppearance="@style/MyHintTextStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:theme="@style/MyEditTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            app:hintTextAppearance="@style/MyHintTextStyle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:theme="@style/MyEditTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/text_login"
            android:textSize="@dimen/_18ssp" />

        <!-- Search ProgressBar -->
        <ProgressBar
            android:id="@+id/pb_login"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentStart="true"
            android:indeterminate="true"
            android:theme="@style/MyProgressBarStyle"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Footer -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/transparent_background">

        <!-- MySettings -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibtn_login_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_settings_24" />

        <!-- Version -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="0.0.0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>